# MARS-AIWeekly

./: .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.nextjs  README.md  Requirements.txt  STRUCTURE.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
backend/: main.py  run.py
backend/config/: __init__.py  model_config.yaml
backend/core/: app.py  config.py
backend/execution/: __init__.py  dag_tracker.py  task_executor.py
backend/loggers/: __init__.py  logger_factory.py  simple_logger.py
backend/models/: __init__.py  aiweekly_schemas.py
backend/routers/: __init__.py  aiweekly.py  models.py  sessions.py
backend/services/: diff_patcher.py  execution_service.py  file_task_store.py  workflow_service.py
backend/task_framework/: __init__.py  aiweekly_helpers.py  news_collection_graph.py  token_utils.py  utils.py
backend/websocket/: handlers.py
docs/: AIWEEKLY_MULTIAGENT_PLAN.md  SESSION_MANAGEMENT.md  aiweekly-flow-diagram.md  aiweekly-integration.md  aiweekly-report-generator.md  logging.md
mars-ui/: .env.local.example  dev-with-browser.js  next.config.js  package-lock.json  package.json
mars-ui/app/: layout.tsx  not-found.tsx  page.tsx
mars-ui/components/aiweekly/: AIWeeklyReportPanel.tsx  AIWeeklyReviewPanel.tsx  AIWeeklySetupPanel.tsx
mars-ui/components/core/: index.ts
mars-ui/components/deepresearch/: RefinementChat.tsx
mars-ui/hooks/: useAIWeeklyTask.ts  useModelConfig.ts
mars-ui/lib/: config.ts  fetchWithRetry.ts
mars-ui/types/: aiweekly.ts  deepresearch.ts  mars-ui.ts  modelOptions.ts
(+7 files in other folders)
